[FIX] just add pre-wrap for message

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -143,7 +143,7 @@ li {
   border-radius: var(--radius-md);
   word-wrap: break-word;
   word-break: break-word;
-  white-space: normal;
+  white-space: pre-wrap;
 }
 
 li:last-child {
